crates/toml_edit/tests/snapshots/invalid/table/duplicate-key-06.stderr
TOML parse error at line 2, column 3
  |
2 | [[tbl]]
  |   ^^^
duplicate key
